Refactor some more and optimize